complete register feature
