# cmd/api/main.go
@@ -16,27 +16,27 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	_ "github.com/belllllx/social-media-go/docs"
+
+	"github.com/gin-contrib/cors"
 )
 
-// @title           Social Media API
-// @version         1.0
-// @description     This is api for social media application
-// @termsOfService  http://swagger.io/terms/
+//	@title			Social Media API
+//	@version		1.0
+//	@description	This is api for social media application
+//	@termsOfService	http://swagger.io/terms/
 
-// @contact.name   API Support
-// @contact.url    http://www.swagger.io/support
-// @contact.email  support@swagger.io
+//	@contact.name	API Support
+//	@contact.url	http://www.swagger.io/support
+//	@contact.email	support@swagger.io
 
-// @license.name  Apache 2.0
-// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+//	@license.name	Apache 2.0
+//	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host      localhost:5000
-// @BasePath  /api
+//	@host		localhost:5000
+//	@BasePath	/api
 
-// @securityDefinitions.basic  BasicAuth
-
-// @externalDocs.description  OpenAPI
-// @externalDocs.url          https://swagger.io/resources/open-api/
+// @externalDocs.description	OpenAPI
+// @externalDocs.url			https://swagger.io/resources/open-api/
 func main() {
 	configs.InitTimeZone()
 	configs.InitConfig()
@@ -49,12 +49,30 @@ func main() {
 	emailRepositoryImpl := email.NewEmailRepositoryImpl()
 	otpRepositoryDB := otp.NewOTPRepositoryDB(db)
 
-	emailService := email.NewEmailService(rdb, emailRepositoryImpl, otpRepositoryDB)
-	authService := auth.NewAuthService(userRepositoryDB, emailService)
+	emailService := email.NewEmailService(
+		rdb,
+		emailRepositoryImpl,
+		otpRepositoryDB,
+	)
+	otpService := otp.NewOTPService(otpRepositoryDB)
+	authService := auth.NewAuthService(
+		rdb,
+		otpRepositoryDB,
+		userRepositoryDB,
+		emailService,
+		otpService,
+	)
 
-	authHandler := auth.NewAuthHandler(authService)
+	authHandler := auth.NewAuthHandler(authService, emailService)
 
 	r := gin.New()
+	r.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{viper.GetString("app.client_url")},
+		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE"},
+		AllowHeaders:     []string{"Origin", "Content-Type"},
+		AllowWebSockets:  true,
+		AllowCredentials: true,
+	}))
 	r.Use(gin.Recovery())
 	r.Use(middlewares.ZapLogger())
 	r.Use(middlewares.GlobalErrorsHandler())
@@ -67,7 +85,13 @@ func main() {
 
 	{
 		auth := api.Group("/auth")
-		auth.POST("/register", authHandler.Register)
+
+		register := auth.Group("/register")
+		register.POST("/send-email", authHandler.SendEmailRegister)
+
+		register.Use(middlewares.AuthRegister())
+		register.POST("/resend-email", authHandler.ResendEmailRegister)
+		register.POST("/verify-otp", authHandler.VerifyOTPRegister)
 	}
 
 	port := fmt.Sprintf(":%s", viper.GetString("app.port"))
