# docs/swagger.json
@@ -18,9 +18,43 @@
     "host": "localhost:5000",
     "basePath": "/api",
     "paths": {
-        "/auth/register": {
+        "/auth/register/resend-email": {
             "post": {
-                "description": "create user pending and send email to verify otp",
+                "description": "resend email register",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.SwaggerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.SwaggerBadRequestResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.SwaggerInternalServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register/send-email": {
+            "post": {
+                "description": "create user store and send email to verify otp",
                 "consumes": [
                     "application/json"
                 ],
@@ -32,12 +66,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "register payload",
+                        "description": "send email register payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.RegisterRequest"
+                            "$ref": "#/definitions/auth.SendEmailRegisterRequest"
                         }
                     }
                 ],
@@ -45,19 +79,64 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.RegisterResponse"
+                            "$ref": "#/definitions/response.SwaggerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.RegisterResponse"
+                            "$ref": "#/definitions/response.SwaggerBadRequestResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.RegisterResponse"
+                            "$ref": "#/definitions/response.SwaggerInternalServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register/verify-otp": {
+            "post": {
+                "description": "verify otp and create user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "parameters": [
+                    {
+                        "description": "verify otp register payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.VerifyOTPRegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.SwaggerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.SwaggerBadRequestResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.SwaggerInternalServerErrorResponse"
                         }
                     }
                 }
@@ -65,7 +144,7 @@
         }
     },
     "definitions": {
-        "auth.RegisterRequest": {
+        "auth.SendEmailRegisterRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -93,7 +172,18 @@
                 }
             }
         },
-        "response.RegisterResponse": {
+        "auth.VerifyOTPRegisterRequest": {
+            "type": "object",
+            "required": [
+                "otp"
+            ],
+            "properties": {
+                "otp": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.SwaggerBadRequestResponse": {
             "type": "object",
             "properties": {
                 "error_fields": {
@@ -112,11 +202,34 @@
                     "type": "boolean"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        },
+        "response.SwaggerInternalServerErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.SwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
         }
     },
     "externalDocs": {
